--- a/public/index.html
+++ b/public/index.html
@@ -91,6 +91,14 @@
                 </div>
             </header>
 
+            <div id="grand-prize-display" class="card grand-prize-card animatable-on-load">
+                <h4><i class="fas fa-trophy"></i> Premio Mayor <i class="fas fa-trophy"></i></h4>
+                <p class="prize-amount">
+                    <span class="amount-number">10,000,000</span>
+                    <span class="currency-name">Hacker Bytes</span>
+                </p>
+                <p class="prize-condition">(Al adivinar todos los pesos correctamente)</p>
+            </div>
             <main class="game-main-content">
                 <section class="scales-area animatable-on-load">
                     <div class="scale-instance main-scale-instance">
@@ -103,13 +111,11 @@
                                  <div class="scale-arm" id="main-scale-arm">
                                     <div class="scale-platform left" id="main-left-platform-visual">
                                         <div class="material-stack" id="main-left-materials"></div>
-                                        <div class="weight-display"><span id="main-left-weight">0</span> g</div>
-                                    </div>
+                                        </div>
                                     <div class="scale-center"><div class="scale-pivot"></div></div>
                                     <div class="scale-platform right" id="main-right-platform-visual">
                                         <div class="material-stack" id="main-right-materials"></div>
-                                         <div class="weight-display"><span id="main-right-weight">0</span> g</div>
-                                    </div>
+                                         </div>
                                 </div>
                                 <div class="scale-base"></div>
                             </div>
@@ -127,13 +133,11 @@
                                 <div class="scale-arm" id="secondary-scale-arm">
                                      <div class="scale-platform left" id="secondary-left-platform-visual">
                                          <div class="material-stack" id="secondary-left-materials"></div>
-                                         <div class="weight-display"><span id="secondary-left-weight">0</span> g</div>
-                                     </div>
+                                         </div>
                                     <div class="scale-center"><div class="scale-pivot"></div></div>
                                     <div class="scale-platform right" id="secondary-right-platform-visual">
                                         <div class="material-stack" id="secondary-right-materials"></div>
-                                        <div class="weight-display"><span id="secondary-right-weight">0</span> g</div>
-                                    </div>
+                                        </div>
                                 </div>
                                 <div class="scale-base"></div>
                             </div>
